--- a/source/java/admin-webapp/index.html
+++ b/source/java/admin-webapp/index.html
@@ -6,6 +6,9 @@
     <meta name="description" content="Formation Data Systems is building a revolutionary converged data platform for web-scale computing.">
 
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta http-equiv='Cache-control' content='no-cache'>
+    <meta http-equiv='Expires' content='0'>
+    <meta http-equiv='Pragma' content='no-cache'>
 
     <!--iOS Meta and Logo -->
     <meta name="apple-mobile-web-app-capable" content="yes">
