adding more test cases to user creation

--- a/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
+++ b/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
@@ -11,7 +11,7 @@
     </div>
 
     <div class="pull-left"style="padding-top: 12px;margin-bottom: 42px;">
-        <button class="btn btn-primary" style="display: inline-block;" ng-click="save()">Create Tenant</button>
+        <button class="btn btn-primary create-tenant-button" style="display: inline-block;" ng-click="save()">Create Tenant</button>
         <button class="btn btn-secondary cancel-creation" style="display: inline-block;" ng-click="cancel()">Cancel</button>
     </div>
 
