adding the line chart widget and snapshot shim

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -28,9 +28,11 @@
     <script type="text/javascript" src="libs/d3/d3.min.js"></script>
 
 <!--@@RELEASE@@    <script type="text/javascript" src="scripts/main.min.js"></script>@@RELEASE@@-->
-<!--@@DEV@@ <script type="text/javascript" src="scripts/main.js"></script>
+<!--@@DEV@@ 
+    <script type="text/javascript" src="scripts/i18n/en_US.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
     <script type="text/javascript" src="scripts/enums.js"></script>
-    <script type="text/javascript" src="scripts/utils.js"></script>
+    
     <script type="text/javascript" src="scripts/module-manifest.js"></script>
 
     <script type="text/javascript" src="scripts/services/authorization.js"></script>
@@ -86,6 +88,7 @@
     <script type="text/javascript" src="scripts/directives/utils/shownotify/shownotify.js"></script>
 
     <script type="text/javascript" src="scripts/directives/charts/treemap/treemap.js"></script>
+    <script type="text/javascript" src="scripts/directives/charts/linechart/linechart.js"></script>
 </head>
 
 <body class="menu-active">
