--- a/source/java/admin-webapp/src/scripts/inbox/inbox.html
+++ b/source/java/admin-webapp/src/scripts/inbox/inbox.html
@@ -3,14 +3,14 @@
     <div class="coming-soon-parent" ng-show="!isAllowed( 'SYS_MGMT' )">
         <div class="coming-soon-child">
             <div style="">
-                <span style="color: white;">Coming soon...</span>
+                <span style="color: white;" translate>common.coming_soon</span>
             </div>
         </div>
     </div>
 
     <div class="header top-label">
         <div style="position:relative;">
-            <div class="pull-left">Messages</div>
+            <div class="pull-left" translate>inbox.messages</div>
             <div class="pull-right">
                 <linkbuttons items="items"></linkbuttons>
             </div>
@@ -19,9 +19,9 @@
         <table class="default">
             <thead>
                 <th style="width: 24px;vertical-align: middle;"><input type="checkbox"/></th>
-                <th>Type</th>
-                <th>Message</th>
-                <th>Received</th>
+                <th translate>status.th_type</th>
+                <th translate>status.th_message</th>
+                <th translate>status.th_received</th>
             </thead>
             <tbody>
                 <tr ng-repeat="message in messages">
