--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -28,12 +28,11 @@
 -->
             </div>
             <div class="tile-parent">
-                <div class="firebreak-tile tile"></div>
-<!--
-                <status-tile title="Firebreak">
-                    <treemap data="firebreakStats" max="firebreakMax"></treemap>
+<!--                <div class="firebreak-tile tile"></div>-->
+                <status-tile title="Firebreak" bold-number="firebreakStats.summaryData.hoursSinceLastEvent"
+                    description="{{ 'status.desc_firebreak' | translate }}">
+                    <treemap data="firebreakStats.series[0]"></treemap>
                 </status-tile>
--->
             </div>
         </div>
     </div>
