firebreak tile is half live getting canned data from a stored js file

--- a/source/java/admin-webapp/src/scripts/directives/widgets/statustile/statusTile.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/statustile/statusTile.html
@@ -1,5 +1,5 @@
 <div class="tile">
-    <div class="tile-title">{{title}}</div>
+    <div class="tile-title">{{tileTitle}}</div>
     <div class="tile-content" ng-transclude></div>
     <div class="tile-status-bar">
         <div class="pull-left main-number">{{wholeNumber}}</div>
