--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -84,6 +84,7 @@
     <script type="text/javascript" src="scripts/directives/widgets/spinner/spinner.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/linkbuttons/linkbuttons.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/statustile/statusTile.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/tooltip/tooltip.js"></script>
 
     <script type="text/javascript" src="scripts/directives/utils/shownotify/shownotify.js"></script>
 
