--- a/source/java/admin-webapp/src/scripts/directives/charts/treemap/treemap.html
+++ b/source/java/admin-webapp/src/scripts/directives/charts/treemap/treemap.html
@@ -1,2 +1,7 @@
-<div style="width: 100%;height: 100%;position: relative;" class="chart">
+<div style="width: 100%;height: 100%;position: relative;">
+    <div style="width: 100%;height: 100%;" class="chart" ng-mouseover="hoverEvent = $event" ng-mouseleave="hoverEvent = $event">
+    </div>
+    <tooltip event="hoverEvent">
+        <div class="tooltip-placeholder"></div>
+    </tooltip>
 </div>
