--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -29,9 +29,9 @@
             </div>
             <div class="tile-parent">
 <!--                <div class="firebreak-tile tile"></div>-->
-                <status-tile title="Firebreak" bold-number="firebreakStats.summaryData.hoursSinceLastEvent"
+                <status-tile tile-title="Firebreak" bold-number="firebreakStats.summaryData.hoursSinceLastEvent"
                     description="{{ 'status.desc_firebreak' | translate }}">
-                    <treemap data="firebreakStats.series[0]"></treemap>
+                    <treemap data="firebreakStats.series[0]" tooltip="setFirebreakToolipText" color-property="secondsSinceLastFirebreak"></treemap>
                 </status-tile>
             </div>
         </div>
