adding the line chart basics and putting delete/clone hooks in

--- a/source/java/admin-webapp/src/scripts/status/status.html
+++ b/source/java/admin-webapp/src/scripts/status/status.html
@@ -20,12 +20,11 @@
         </div>
         <div class="tile-pair">
             <div class="tile-parent">
-                <div class="performance-tile tile"></div>
-<!--
-                <div class="tile">
-                    <line-chart data="fakeData" colors="fakeColors" opacities="fakeOpacities"></line-chart>
-                </div>
--->
+<!--                <div class="performance-tile tile"></div>-->
+                <status-tile tile-title="Performance" bold-number="23"
+                    description="what what what what">
+                    <line-chart data="performanceStats" colors="fakeColors" opacities="fakeOpacities"></line-chart>
+                </status-tile>
             </div>
             <div class="tile-parent">
 <!--                <div class="firebreak-tile tile"></div>-->
