changing navigation procedures to enable dynamically built traversal paths and editing test cases accordingly.

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -51,6 +51,7 @@
     <script type="text/javascript" src="scripts/services/admin/tenant_service.js"></script>
 
     <script type="text/javascript" src="scripts/main/mainController.js"></script>
+    <script type="text/javascript" src="scripts/volumes/volumeContainerController.js"></script>
     <script type="text/javascript" src="scripts/volumes/volumeController.js"></script>
     <script type="text/javascript" src="scripts/volumes/create/volumeCreateController.js"></script>
     <script type="text/javascript" src="scripts/volumes/create/nameTypeController.js"></script>
@@ -76,6 +77,7 @@
     <script type="text/javascript" src="scripts/directives/widgets/priorityslider/priorityslider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/variableslider/variableslider.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/navitem/navitem.js"></script>
+    <script type="text/javascript" src="scripts/directives/widgets/slidewindowstack/slidewindowstack.js"></script>
     <script type="text/javascript" src="scripts/directives/widgets/tristatecheck/tristatecheck.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-checkbox/fui-checkbox.js"></script>
     <script type="text/javascript" src="scripts/directives/angular-fui/fui-dropdown/fui-dropdown.js"></script>
