--- a/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
+++ b/source/java/admin-webapp/src/scripts/volumes/create/volumeCreate.html
@@ -1,4 +1,5 @@
-<div class="create-panel volumes" ng-controller="volumeCreateController" ng-class="{shown: $parent.creating,hideit: !$parent.creating}">
+<!--<div class="create-panel volumes" ng-controller="volumeCreateController" ng-class="{shown: $parent.creating,hideit: !$parent.creating}">-->
+<div class="create-panel volumes" ng-controller="volumeCreateController">
     <div class="modal-header">
         <span>Create Volume</span>
     </div>
