Moving the user page over to the new slide deck

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -64,6 +64,7 @@
     <script type="text/javascript" src="scripts/tenants/create/createTenantController.js"></script>
     <script type="text/javascript" src="scripts/users/userController.js"></script>
     <script type="text/javascript" src="scripts/users/create/createUserController.js"></script>
+    <script type="text/javascript" src="scripts/users/userContainerController.js"></script>
     <script type="text/javascript" src="scripts/account/accountController.js"></script>
     <script type="text/javascript" src="scripts/volumes/create/snapshotPolicyController.js"></script>
     <script type="text/javascript" src="scripts/admin/admin.js"></script>
