--- a/source/java/admin-webapp/src/scripts/directives/widgets/slidewindowstack/slidewindowslide.html
+++ b/source/java/admin-webapp/src/scripts/directives/widgets/slidewindowstack/slidewindowslide.html
@@ -1,3 +1,3 @@
-<div class="slide-window-stack-slide" ng-style="{left: left + '%'}" ng-show="left >= -100 && left <= 100">
+<div class="slide-window-stack-slide" ng-style="{left: left + '%', opacity: left === 0 ? 1.0 : 0.0 }">
     <div ng-transclude></div>
 </div>
