--- a/source/java/admin-webapp/src/scripts/users/create/createUser.html
+++ b/source/java/admin-webapp/src/scripts/users/create/createUser.html
@@ -1,4 +1,4 @@
-<div ng-controller="createUserController" class="dialog-page create-user" ng-class="{shown: creating,hideit: !creating}" show-notify ng-show="creating">
+<div ng-controller="createUserController" class="create-user" show-notify>
     
     <div class="modal-header">
         <span>Create User</span>
