Converting tenants to the new slide deck layout and wiring refresh triggers

--- a/source/java/admin-webapp/src/index.html
+++ b/source/java/admin-webapp/src/index.html
@@ -61,6 +61,7 @@
     <script type="text/javascript" src="scripts/activity/activityController.js"></script>
     <script type="text/javascript" src="scripts/status/statusController.js"></script>
     <script type="text/javascript" src="scripts/tenants/tenantController.js"></script>
+    <script type="text/javascript" src="scripts/tenants/tenantContainerController.js"></script>
     <script type="text/javascript" src="scripts/tenants/create/createTenantController.js"></script>
     <script type="text/javascript" src="scripts/users/userController.js"></script>
     <script type="text/javascript" src="scripts/users/create/createUserController.js"></script>
