--- a/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
+++ b/source/java/admin-webapp/src/scripts/tenants/create/createTenant.html
@@ -1,4 +1,4 @@
-<div ng-controller="createTenantController" class="dialog-page create-tenant" ng-class="{shown: creating,hideit: !creating}" show-notify ng-show="creating">
+<div ng-controller="createTenantController" class="create-tenant" show-notify>
 
     <div class="modal-header">
         <span>Create Tenant</span>
