--- a/source/java/admin-webapp/src/scripts/tenants/tenants.html
+++ b/source/java/admin-webapp/src/scripts/tenants/tenants.html
@@ -1,4 +1,4 @@
-<div ng-controller="tenantController" class="page-slider-parent" ng-style="{left: creating || viewing ? '-100%' : '0%'}">
+<div ng-controller="tenantController">
 
     <div class="front-page">
         <div>
@@ -36,8 +36,5 @@
             </tboday>
         </table>
     </div>
-
-    <!-- tenant creation slide out -->
-    <div ng-include="'scripts/tenants/create/createTenant.html'"></div>
 
 </div>
