--- a/source/java/admin-webapp/src/scripts/users/users.html
+++ b/source/java/admin-webapp/src/scripts/users/users.html
@@ -1,4 +1,4 @@
-<div ng-controller="userController" style="width: 100%;">
+<div ng-controller="userController">
 
     <div class="coming-soon-parent" ng-show="!isAllowed( 'SYS_MGMT' )">
         <div class="coming-soon-child">
